--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -1,4 +1,4 @@
-@import '../../styles/colors.scss';
+@import "../../styles/colors.scss";
 
 .login {
   display: flex;
@@ -17,7 +17,7 @@
     box-shadow: 0px 1px 3px -1px $black;
 
     h2 {
-      color: primaryDark;
+      color: $primaryDark;
       text-align: center;
       font-size: 20px;
       text-transform: uppercase;
