--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/colors.scss";
+@import '../../styles/colors.scss';
 
 .login {
   display: flex;
@@ -23,17 +23,8 @@
       text-transform: uppercase;
     }
 
-    .submit {
+    button {
       margin-top: 32px;
-
-      &:disabled {
-        background-color: $disabledBackground;
-        color: $disabledColor;
-
-        &:hover {
-          opacity: 1;
-        }
-      }
     }
 
     .link {
