feat: add SurveyResult layout

--- a/src/presentation/components/spinner/spinner-styles.scss
+++ b/src/presentation/components/spinner/spinner-styles.scss
@@ -1,10 +1,16 @@
-@import "../../styles/colors.scss";
+@import '../../styles/colors.scss';
 
 .spinner {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 13px;
+
+  &.negative {
+    div {
+      background: $white;
+    }
+  }
 
   div {
     position: absolute;
@@ -41,7 +47,7 @@
   0% {
     transform: scale(0);
   }
-  
+
   100% {
     transform: scale(1);
   }
